# app/controllers/books_controller.rb
@@ -1,6 +1,6 @@
 class BooksController < ApplicationController
   def index
-    execute(Library::ListBooks, page: params[:page], per_page: params[:per_page])
+    execute(Library::ListBooks, page: params[:page], per_page: params[:per_page], status: params[:status])
   end
 
   def show
@@ -17,6 +17,14 @@ class BooksController < ApplicationController
 
   def destroy
     execute(Library::DeregisterBook, id: params[:id])
+  end
+
+  def borrow
+    execute(Library::BorrowBook, book_id: params[:id], reader_id: params[:reader_id])
+  end
+
+  def return
+    execute(Library::ReturnBook, book_id: params[:id])
   end
 
   private
